@@ -2,6 +2,7 @@ git-annex (6.20160115) UNRELEASED; urgency=medium
 
   * whereis --json: Urls are now listed inside the remote that claims them,
     rather than all together at the end.
+  * info: Support --batch mode.
 
  -- Joey Hess <id@joeyh.name>  Fri, 15 Jan 2016 14:05:01 -0400
 
